# framework.web.wearable.wrt

./: .gitignore  CMakeLists.txt  DESCRIPTION  README  dir-struct.py  doxyfile  uncrustify.sh  wrt-engine-test.map  wrt-engine.map  wrt-launcher.efl  wrt.manifest  wrt_env.sh  wrt_launchpad_daemon.efl  wrt_reset_all.sh  wrt_reset_db.sh
data/: DESCRIPTION  Wrt.edc  generic_popup.edc  generic_popup_horizontal.edc
po/: CMakeLists.txt  ar.po  as.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  ky_KG.po  lo.po  (+38 more)
src/: CMakeLists.txt
src/api_new/: CMakeLists.txt  client_security_support.cpp  core_module.cpp  core_module.h  i_runnable_widget_object.h  runnable_widget_object.cpp  runnable_widget_object.h  runnable_widget_object_state.cpp  runnable_widget_object_state.h  user_delegates.h
src/domain/: DESCRIPTION  application_data.cpp  application_data.h  iana_record_types.h  localization_setting.cpp  localization_setting.h  main_thread.cpp  main_thread.h  permission_popup_manager.cpp  permission_popup_manager.h  widget_data_types.cpp  widget_data_types.h  widget_deserialize_model.cpp  widget_deserialize_model.h  widget_model.cpp  widget_model.h  widget_string.h
src/plugin-service/: CMakeLists.txt  DESCRIPTION  wrt_plugin_module.cpp  wrt_plugin_module.h
src/profiling/: CMakeLists.txt  profiling_util.cpp  profiling_util.h
src/profiling/script/: profiling-host-part.pl  profiling-target-part.pl  ranges  ranges.py
src/profiling/script/test-widgets/: 0Jet_Pack_Agent.wgt  UnitTestAuto.wgt  minimal.wgt
src/profiling/script/utils/: analyse.pl  csv-stats.pl  generate-plot.sh  plot-generator.gplot  wrt-preloader
src/view/: CMakeLists.txt  context_manager.cpp  i_context_manager.h  i_view_module.h  view_module.cpp
src/view/common/: CMakeLists.txt  application_launcher.cpp  application_launcher.h  evas_object.cpp  evas_object.h  message_support.h  scheme.cpp  scheme.h  scheme_action_map.cpp  scheme_action_map.h  scheme_action_map_data.h  scheme_action_map_type.h  view_logic_apps_support.cpp  view_logic_apps_support.h  view_logic_certificate_support.cpp  view_logic_certificate_support.h  view_logic_custom_header_support.cpp  view_logic_custom_header_support.h  view_logic_get_parent_window_util.h  view_logic_help_popup_support.cpp  view_logic_help_popup_support.h  view_logic_privilege_support.cpp  view_logic_privilege_support.h  view_logic_security_origin_support.cpp  view_logic_security_origin_support.h  view_logic_security_origin_support_util.cpp  view_logic_security_origin_support_util.h  view_logic_security_support.cpp  view_logic_security_support.h  view_logic_storage_support.cpp  view_logic_storage_support.h  view_logic_uri_support.cpp  view_logic_uri_support.h  view_logic_vibration_support.cpp  view_logic_vibration_support.h
src/view/webkit/: CMakeLists.txt  ewk_context_manager.cpp  ewk_context_manager.h  view_logic.cpp  view_logic.h  view_logic_authentication_request_support.cpp  view_logic_authentication_request_support.h  view_logic_certificate_confirm_support.cpp  view_logic_certificate_confirm_support.h  view_logic_geolocation_support.cpp  view_logic_geolocation_support.h  view_logic_message_support.cpp  view_logic_message_support.h  view_logic_orientation_support.cpp  view_logic_orientation_support.h  view_logic_scheme_support.cpp  view_logic_scheme_support.h  view_logic_user_agent_support.cpp  view_logic_user_agent_support.h  view_logic_usermedia_support.cpp  view_logic_usermedia_support.h  view_logic_web_notification_data.cpp  view_logic_web_notification_data.h  view_logic_web_notification_permission_support.cpp  view_logic_web_notification_permission_support.h  view_logic_web_notification_support.cpp  view_logic_web_notification_support.h  view_logic_web_storage_support.cpp  view_logic_web_storage_support.h
src/view/webkit/injected-bundle/: CMakeLists.txt  injected_bundle_decryption_support.cpp  injected_bundle_decryption_support.h  injected_bundle_uri_handling.cpp  injected_bundle_uri_handling.h  injected_bundle_viewmodes_support.cpp  injected_bundle_viewmodes_support.h  page_global_context_container.cpp  page_global_context_container.h  wrt-injected-bundle.cpp  wrt-injected-bundle.h  wrt-injected-bundle.map
src/wrt-client/: CMakeLists.txt  DESCRIPTION  client_command_line_parser.cpp  client_command_line_parser.h  client_ide_support.cpp  client_ide_support.h  client_orientation_support.cpp  client_orientation_support.h  client_security_support.h  client_submode_support.cpp  client_submode_support.h  splash_screen_support.cpp  splash_screen_support.h  widget_state.h  window_data.cpp  window_data.h  wrt-client.cpp  wrt-client.h
src/wrt-client/process_pool/: smack_labeling_support.cpp  smack_labeling_support.h
src/wrt-launcher/: CMakeLists.txt  wrt-launcher.cpp
src/wrt-launchpad-daemon/: CMakeLists.txt  wrt_launchpad_daemon.map
src/wrt-launchpad-daemon/feature/: preexec.h
src/wrt-launchpad-daemon/include/: access_control.h  app_signal.h  app_sock.h  aul_util.h  config.h  execute_on_whole_thread_util.h  gl.h  launchpad_util.h  menu_db_util.h  perf.h  process_pool.h  process_pool_launchpad_util.h  simple_util.h
src/wrt-launchpad-daemon/launchpad_src/: launchpad.c  sigchild.h  util_x.c  util_x.h
src/wrt-launchpad-daemon/legacy/: preload.h  preload_list_wrt.txt
src/wrt-launchpad-daemon/src/: app_sock.c  process_pool.c  simple_util.c
tests/widgets/: CMakeLists.txt  CMakeUtils.txt  TestCases.cpp  TestInit.cpp
tests/widgets/common/: CMakeLists.txt
tests/widgets/common/include/: InstallerWrapper.h  RunnableObjectStateTester.h
tests/widgets/common/include/mock/: MockContextManager.h  MockViewModule.h
tests/widgets/common/src/: InstallerWrapper.cpp  RunnableObjectStateTester.cpp
tests/widgets/common/src/mock/: MockContextManager.cpp  MockViewModule.cpp
tests/widgets/files/: CMakeLists.txt  any.wgt  minimal.wgt
(+4 files in other folders)
